force-app/main/default/objects/Enrollment__c/fields/Course_Information__c.field-meta.xml
<CustomField>
    <fullName>Course_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Information</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Course_Information__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Course_Information__c</referenceTo>
    <relationshipLabel>Enrollments</relationshipLabel>
    <relationshipName>Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>