force-app/main/default/objects/Enrollment__c/fields/Enrolled_Date__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Enrolled Date</label>
    <type>Date</type>
</CustomField>