force-app/main/default/objects/Enrollment__c/fields/Estimated_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_End_Date__c</fullName>
    <formula>Start_Date__c  +  Course_Information__r.Duration_In_weeks__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated End Date</label>
    <type>Date</type>
</CustomField>